package com.okanetransfer.shared.enums;

public enum TypePiece {
    CIN,            // carte d'identité nationale
    PASSEPORT,      // passeport international
    CARTE_SEJOUR,   // carte de séjour pour résidents étrangers
    PERMIS          // permis de conduire (accepté dans certains pays)
}
